<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".About">

    <LinearLayout
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="#FFFFFF">

        <ImageView

            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/app_icon"
            android:contentDescription="@string/todo" />

        <TextView
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_1_0_0"
            android:textStyle="bold" />


        <ImageView

            android:layout_width="match_parent"
            android:layout_height="233dp"
            android:contentDescription="@string/todo"
            android:scaleType="fitCenter"
            android:src="@drawable/splash_logo" />


        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_info"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:text="@string/contact_email"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>